--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -7,7 +7,7 @@
 name: My-GitHub-Action-Basics
 env:
   APPLICATION_NAME: "MyTest"
-  Deploy_PACKAGE_NAME: "test-deploy-ver-{{github.sha }}"
+  Deploy_PACKAGE_NAME: "test-deploy-ver-{{ github.sha }}"
 
 on:
   push:
@@ -21,11 +21,15 @@ jobs:
     steps:
     - name: Print Hello Message
       run: echo "Hello World from testing job"
+    
     - name: Execute for commands
       run: |
         echo "Hello Message1"
         echo "Hello Message2"
         echo "Application name: ${{ env.APPLICATION_NAME }}"
+        
+    - name: List current folder
+      run: ls -la
       
   my_deploy:
     runs-on: ubuntu-latest
