--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -7,7 +7,7 @@
 name: My-GitHub-Action-Basics
 env:
   APPLICATION_NAME: "MyTest"
-  Deploy_PACKAGE_NAME: "test-deploy-ver-{{ github.sha }}"
+  Deploy_PACKAGE_NAME: "test-deploy-ver-${{ github.sha }}"
 
 on:
   push:
@@ -31,6 +31,12 @@ jobs:
     - name: List current folder
       run: ls -la
       
+    - name: Git clone my repo
+      uses: actions/checkout@v1
+      
+    - name: List current folder
+      run: ls -la
+      
   my_deploy:
     runs-on: ubuntu-latest
     needs: [my_testing]
@@ -41,3 +47,9 @@ jobs:
       
     - name: Printing Deployment packege
       run: echo "Deploy package name is ${{ env.Deploy_PACKAGE_NAME }}"
+
+    - name: Lets test some packages if they are here 1
+      run: aws --version
+      
+    - name: Lets test some packages if they are here 2
+      run: zip
