--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -40,10 +40,21 @@ jobs:
   my_deploy:
     runs-on: ubuntu-latest
     needs: [my_testing]
+    env:
+      VAR1: "This is Job variable1"
+      VAR2: "This is Job variable2"
     
     steps:
     - name: Print Hello Message
       run: echo "Hello World from deploy job"
+      
+    - name: Print env vars
+      run: |
+        echo "Var1 = ${{ env.VAR1 }}"
+        echo "VAR2 = ${{ env.VAR2 }}"
+        echo "VAR3 = $LOCAL_VAR"
+      env:
+        LOCAL_VAR: "This is Local variable"
       
     - name: Printing Deployment packege
       run: echo "Deploy package name is ${{ env.Deploy_PACKAGE_NAME }}"
@@ -52,4 +63,4 @@ jobs:
       run: aws --version
       
     - name: Lets test some packages if they are here 2
-      run: zip
+      run: zip --version
